# Benzina

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  AUTHORS.md  CONTRIBUTORS.md  LICENSE.md  MANIFEST.in  README.md  README.rst  README_src.rst  ilsvrcclient.cpp  ilsvrcgen.cpp  ilsvrcserver.cpp  install-hooks.py  meson.build  meson_options.txt  setup.cfg  setup.py
.datalad/: config
doc/: meson.build  requirements
doc/benzina_native_placeholder/benzina/: __init__.py  native.py
doc/benzina_placeholders/benzina/: __init__.py  native.py  version.py
doc/source/: conf.py  description.rst  imagenet_example.rst  index.rst  limits.rst  links.rst  objectives.rst  roadmap.rst
doc/source/api/: _index.rst  dataloader.rst  dataset.rst  operations.rst  utils.rst
doc/source/compilation/: _index.rst  cedar.rst  mila.rst
doc/source/contribution/: _index.rst  contributing_changes.rst  submitting_bugs.rst
doc/source/datasets/: list.rst
doc/source/examples/: _index.rst  imagenet_example.rst
examples/python/imagenet/: README.rst  imagenet_pytorch.py  main.py
include/: benzina.h  meson.build
include/benzina/: attribute.h  benzina-cuda.h  benzina-old.h  benzina.h  bitops.h  bits.h  config.h  endian.h  geometry.h  inline.h  intops.h  iso.h  meson.build  ptrops.h  siphash.h  version.h  visibility.h
include/benzina/bcachefs/: bcachefs-ops.h  bcachefs-types.h  bcachefs.h
include/benzina/iso/: bmff-box.h  bmff-intops.h  bmff-types.h  bmff.h  iso.h  meson.build
include/benzina/itu/: h264.h  h265.h  h26x-bitstream.h  h26x.h  meson.build
include/benzina/lua/: lua2py.h  meson.build  py2lua.h
include/benzina/plugins/: meson.build  nvdecode.h
scripts/: LONG_DESCRIPTION.txt  bench.py  detectgpus.c  detectgpus.py  elf-strip-df-1-pie.py  elf.py  git.py  import-lua-patches.sh  lz4-lua-pack.py  meson.build  run_bench.py  setup.py  utils.py  version.py.in  versioning.py
src/: benzina.c  benzinadataset.proto  benzinafork.c  benzinafork.h  benzinanvdecgen.c  benzinaproto.c  benzinaproto.h  benzinasrv.c  benzinasrv.proto  forkserver.c  forkservertest.c  ilsvrcclient.cpp  ilsvrcgen.cpp  ilsvrcserver.cpp  meson.build  nvdecload.cu  nvdecload.h  plugin_nvdecode_kernel.cu
src/benzina/: __init__.py  native.c  native.h  native_benzinadataloaderitercore.c  native_benzinadatasetcore.c  native_benzinaloaderitercore.c  native_benzinapluginnvdecodecore.c  native_datasetcore.c  native_datasetcore.h  native_nvdecodedataloaderitercore.c  native_nvdecodedataloaderitercore.h  native_nvdecodedataloaderitercorebatchcm.c  native_nvdecodedataloaderitercorebatchcm.h  native_nvdecodedataloaderitercoresamplecm.c  native_nvdecodedataloaderitercoresamplecm.h  server.py
src/benzina/_native/: __init__.py  view.py
src/benzina/_native/_C/: _C.c  _C.h  benzinaobjects.h  benzinaviewobject.c  boxviewobject.c  fileviewobject.c  fullboxviewobject.c  viewobject.c
src/benzina/conversion/: color_psnrhma.m  ilsvrc2012.py  ilsvrc2012.sh  psnrhma.m  psnrhma.py  runner.sh
src/benzina/torch/: __init__.py  dataloader.py  dataset.py  nvdec.py  nvdecode.py  operations.py
src/benzina/torch/dataset/: __init__.py  coco.py  dataset.py  imagenet.py
src/benzina/utils/: __init__.py  color.py  file.py  input_access.py  mp4.py  psnrhma.py
src/libbenzina/: benzina.c  benzinaproto.c  bitops.c  endian.c  init.c  internal.S  internal.h  internal.noarch.S  intops.c  iso.c  libbenzina.lds  libbenzina.ver  main.c  meson.build  ptrops.c  siphash.c  version.c
src/libbenzina-cuda/: kernels.cu  meson.build
src/libbenzina-geom/: geometry.h  meson.build
src/libbenzina/bcachefs/: README.md  bcachefs.c  meson.build  shell.c
src/libbenzina/iso/: bmff-box-size.c  bmff-box.c  bmff-intops.c  iso.c  meson.build
src/libbenzina/itu/: h264.c  h265.c  h26x-bitstream.c  h26x.c  meson.build
src/libbenzina/lua/: lua2py.c  meson.build  py2lua.c
src/libbenzina/os/: meson.build
src/libbenzina/os/linux/: libbenzina.script  meson.build
src/plugins/: meson.build
src/plugins/nvdecode/: kernels.cpp  kernels.cu  kernels.h  main.c  meson.build  nvdecodegen.c
src/plugins/skeleton/: main.c  meson.build
src/proto/: Dataset.proto  Datum.proto
src/tests/: meson.build  test_bcachefs.lua  test_itu.c  test_lowlevel.c  test_lua.c  test_siphash.lua
src/tools/: meson.build
src/tools/benz/: main.c  meson.build
src/tools/geom/: geometry.c  geometry.h  main.c  meson.build
src/tools/image2heif/: README.md  main.c  main.h  meson.build  utils.c  utils.h
src/tools/img2vid/: README.md  geometry.c  geometry.h  img2vid.c  img2vid.h  img2vid_kernels.cpp  img2vid_kernels.h  kernels.cpp  kernels.cu  kernels.h  main.c  main.h  meson.build  utils.c  utils.h
src/tools/nvdecodetest/: main.c  meson.build
src/tools/skeleton/: main.c  meson.build
subprojects/: lfs.wrap  linenoise.wrap  lpeg.wrap  lua.wrap  lz4.wrap  penlight.wrap
subprojects/packagefiles/lfs/: LICENSE.S  linker.S  linker.noarch.S  meson.build
subprojects/packagefiles/linenoise/: LICENSE.S  linker.noarch.S  meson.build
subprojects/packagefiles/lpeg/: LICENSE.md  linker.noarch.S  meson.build
subprojects/packagefiles/lua/: 000-lua-5.4.3-postrel.patch  001-main-function-rename.patch  002-advanced-linenoise-history.patch  003-searcher-static-C.patch  004-implement-static-searcher.patch  004-searcher-static-Lua.patch  LICENSE.S  LICENSE.md  apply-patches.sh  linker.noarch.S  luabenz.h  luac.c  meson.build
subprojects/packagefiles/lua/patches/: 0001-Enable-renaming-main-functions.patch  0002-Advanced-history-and-line-completion-support.patch  0003-Add-static-searcher-mechanism.patch  0004-Implement-static-searcher-mechanism.patch  0005-Add-initial-thread-locking-support.patch
subprojects/packagefiles/lua/src/: 001-main-function-rename.patch  002-lfs-static-link.patch  002-luaopen-extra-preload.patch  apply-patches.sh  luabenz.h  meson.build
subprojects/packagefiles/lz4/: linker.noarch.S  meson.build
subprojects/packagefiles/penlight/: linker.noarch.S  meson.build
tests/: meson.build
tests/benzina/torch/: meson.build  test_devsubset.py  test_operations.py
(+1 files in other folders)
