option('nvidia_home',     yield: true,  type: 'string',  value: '/usr/local/cuda',                       description: 'Path to preferred CUDA Toolkit.')
option('nvidia_runtime',  yield: true,  type: 'combo',   value: 'static', choices: ['static', 'shared'], description: 'Preferred CUDA Runtime (libcudart) linkage.')
option('nvidia_arch',     yield: true,  type: 'string',  value: 'Auto',                                  description: 'The CUDA GPU architectures to build the kernels for: Auto (Detected automatically), Common, All, or a space- or semicolon-separated list of compute capabilities.')
option('nvidia_driver',   yield: true,  type: 'string',  value: 'Auto',                                  description: 'The NVIDIA driver version to target. Features available only in newer drivers will not be used.')
option('nvdec_version',   yield: true,  type: 'string',  value: 'Auto',                                  description: 'The NVDEC version to target. Features available only in newer drivers will not be used.')
option('enable_gpl',      yield: true,  type: 'boolean', value: false,                                   description: 'Whether to enable linking against GPL software or not.')
option('building_py_pkg', yield: true,  type: 'boolean', value: false,                                   description: 'INTERNAL. Indicates to Meson that setuptools is building a Python package.')
option('py_interpreter',  yield: true,  type: 'string',  value: '',                                      description: 'INTERNAL. The Python 3 interpreter to use for executing scripts. By default, the same as Meson\'s.')
